# g

./: .envrc  README.md  flake.nix  justfile  main.py  pyproject.toml  treefmt.nix
src/: __main__.py
src/g_game/: __main__.py  controls.py  draw.py  game.py  window.py
src/g_game/terrain/: __init__.py  chunk.py  meshing.py  world.py
src/g_utils/: __init__.py  glog.py  glogger.py  render.py  utils.py
src/game/: __main__.py
src/gutils/: __init__.py
src/shaders/: simple.frag  simple.vert
